# lantern

./: .env.example  .gitignore  .golangci.yml  .mcp.json  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PITCH.md  README.md  SECURITY.md  package-lock.json  rust-toolchain.toml
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS
.github/workflows/: build-images.yml  deploy-docs.yml  docs-links.yml  microvm-integration.yml  runtime-cluster-e2e.yml  sdlc-audit.yml  sdlc-autoapprove.yml  sdlc-classify.yml  sdlc-control.yml  sdlc-design-review.yml  sdlc-fix.yml  sdlc-implement-on-label.yml  sdlc-implement.yml  sdlc-lint.yml  sdlc-plan.yml  sdlc-qa.yml  sdlc-release.yml  sdlc-review.yml  sdlc-security.yml  sdlc-vuln.yml  sign-images.yml
apps/docs/: .gitignore  next.config.ts  package-lock.json  package.json
apps/landing/: package-lock.json  package.json
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: GA-READINESS.md  LAUNCH-CHECKLIST.md
docs/adr/: 0001-language-stack.md  0002-runtime-class-per-workload.md  0003-scheduler-as-separate-service.md  0004-harness-baked-into-vm-image.md  0005-secret-vending-via-short-jwt.md  0006-egress-allowlist-at-harness.md  0007-snapshot-retention-policy.md  0008-runtime-secret-relay.md  0009-kubernetes-default-runtime-substrate.md  0010-versioned-db-migrations.md  0011-rls-all-tenant-tables.md  0012-agent-sandbox-backend.md  0013-billing-scheduler-grpc-memory-rest.md  0014-control-plane-model-router-cutover.md  0015-runtime-exectool-rpc.md  0016-domain-tracker-agents.md  0017-browser-as-skill.md
docs/architecture/: 00-roadmap.md  01-overview.md  02-components.md  03-data-model.md  04-runtime-isolation.md  04b-microvm-productionization.md  04c-microvm-integration-test.md  05-workflow-engine.md  06-model-router.md  07-context-management.md  08-streaming.md  10-security.md  11-testing.md  12-control-surfaces.md  13-connectors-and-integrations.md  14-visual-builder.md  15-personal-workflows.md  16-mcp-and-a2a.md  17-deployment-model.md  18-agent-runtime-nextgen.md  19-agent-sandbox-backend-spike.md
docs/guides/: README.md  durable-execution.md  headless-agent-quickstart.md  identity-and-secrets.md  isolation-classes.md  observability.md  verifiable-receipts.md
docs/personal/: BOT-SETUP.md  INTELLIGENCE-LAYER.md  IOS-SHORTCUT.md  RCS-SETUP.md  REMOTE-ACCESS.md  SETUP.md  SHORTCUTS.md  STREAMING-VOICE.md  VALIDATION.md  owner-profile.example.md
docs/research/: 01-providers.md
docs/runbooks/: README.md  budget-402-surge.md  control-plane-5xx.md  data-plane-disconnected.md  db-restore.md  db-saturation.md  ga-staged-rollout.md  gateway-latency.md  run-failure-spike.md  scheduler-not-firing.md
e2e/: README.md
e2e/quickstart/: go.mod  quickstart_e2e_test.go
e2e/runtime/: go.mod  runtime_e2e_test.go
evals/anti-tell/: run.mjs  scorer-prompt.txt  seeds.json
examples/code-reviewer/: README.md  agent.yaml  package.json
examples/customer-support/: README.md  agent.yaml  package.json
examples/data-pipeline/: README.md  agent.yaml  package.json
examples/deploy-guardian/: README.md  agent.yaml  package.json
examples/headless-agents/: MANUAL-TEST.md  README.md
examples/hello-world/: README.md  agent.yaml  package.json
examples/research-agent/: README.md  agent.yaml  package.json
examples/talent-scout/: README.md  agent.yaml  package.json
examples/whatsapp-assistant/: README.md  agent.yaml  package.json
infra/db/: least-privilege.sql
infra/docker/: docker-compose.yml
infra/firecracker/: build-image.sh  integration-test.sh
infra/helm/: .gitignore
infra/k8s/: README.md  gke-agent-sandbox-setup.sh  kind-cluster.yaml  validate.sh
infra/kind/: kind-config.yaml
infra/lima/: README.md  firecracker-dev.yaml
scripts/: bridge-setup.sh  check-docs-links.mjs  dev-doctor.sh  e2e-dataplane-smoke.sh  kill-port.sh  loadtest-runs.sh  local-dev.sh  regression.sh  seed-data.sh  signal-watchdog.sh  validate-docs-live.sh  whatsapp-nuclear-reset.sh
scripts/iphone/: Post-Signal.template.shortcut  README.md  lantern-automations-widget.js  serve-shortcuts.sh  tailscale-serve.sh
scripts/launchd/: README.md  a2p-watcher.sh  dev.lantern.api.plist  dev.lantern.dashboard.plist  dev.lantern.gateway.plist  dev.lantern.imessage-bridge.plist  dev.lantern.infra.plist  dev.lantern.model-router.plist  dev.lantern.runtime-manager.plist  dev.lantern.runtime-scheduler.plist  dev.lantern.surface-gateway.plist  dev.lantern.whatsapp-bridge.plist  imessage-always-on.sh  (+9 more)
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: auth.rs  config.rs  error.rs  grpc.rs  main.rs  otel.rs  sse.rs  state.rs  tls.rs
services/gateway/src/middleware/: mod.rs  otel_span.rs  rate_limit.rs
services/gateway/src/routes/: agents.rs  health.rs  mod.rs  runs.rs
services/harness/: Cargo.toml  Dockerfile  README.md  build.rs
services/harness/src/: egress.rs  exec.rs  heartbeat.rs  init.rs  logs.rs  main.rs  manager_client.rs  otel.rs  proto.rs  report.rs  secrets.rs  signals.rs  supervisor.rs  tls.rs
services/model-router/: Cargo.toml  Dockerfile
services/model-router/src/: cache.rs  config.rs  error.rs  main.rs  otel.rs  proto.rs  provider.rs  router.rs  service.rs
services/model-router/src/providers/: anthropic.rs  mod.rs  openai.rs
services/runtime-manager/: Cargo.toml  Dockerfile  README.md  build.rs
services/runtime-manager/src/: backend.rs  config.rs  handle_registry.rs  main.rs  otel.rs  pool.rs  proto.rs  report_forwarder.rs  runtimeclass_preflight.rs  scheduler_heartbeat.rs  secret_resolver.rs  service.rs  snapshot_store.rs  tls.rs
services/runtime-manager/src/backends/: docker.rs  firecracker.rs  k8s.rs  kata.rs  mod.rs  wasm.rs
services/surface-gateway/: Cargo.toml  Dockerfile
services/surface-gateway/src/: adapter.rs  config.rs  dispatcher.rs  error.rs  main.rs  routes.rs  session.rs  tenant_resolver.rs  types.rs
services/surface-gateway/src/adapters/: discord.rs  mod.rs  slack.rs  telegram.rs  twilio.rs  whatsapp.rs
(+653 files in other folders)
