[package]
name = "lantern-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry — env-gated, no-op by default when OTEL_EXPORTER_OTLP_ENDPOINT is unset.
# HTTP transport so the exporter URL convention matches the Go control-plane.
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.28"
jsonwebtoken = "9"
redis = { version = "0.27", features = ["tokio-comp"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
thiserror = "2"
anyhow = "1"
futures-core = "0.3"
http = "1"
subtle = "2"
# TLS termination — rustls-based, config-driven, FAIL-CLOSED in prod
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"

[dev-dependencies]
# rcgen generates self-signed certs at test-time (never in production code)
rcgen = "0.13"
