[package]
name = "lantern-harness"
version = "0.1.0"
edition = "2024"
description = "Lantern RuntimeHarness — PID 1 init process running inside every Lantern microVM"

[[bin]]
name = "lantern-harness"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# ReceiverStream for the in-guest exec server's response stream.
# Already a transitive dep of tonic — no new crate enters the tree.
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# "term" pulls in nix::pty (openpty + Winsize) for interactive `vm exec -t`.
nix = { version = "0.29", features = ["signal", "process", "term"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dashmap = "6"
# mTLS client: harness presents a per-VM client cert to the manager
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"

[dev-dependencies]
rcgen = "0.13"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
