[package]
name = "lantern-model-router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry — env-gated, no-op by default when OTEL_EXPORTER_OTLP_ENDPOINT is unset.
# Versions pinned to match runtime-manager (opentelemetry 0.27 / tracing-opentelemetry 0.28).
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.28"
redis = { version = "0.27", features = ["tokio-comp"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
pin-project-lite = "0.2"
sha2 = "0.10"
hex = "0.4"
