[package]
name = "lantern-runtime-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.23", features = ["latest"] }
kube = { version = "0.97", features = ["runtime", "derive", "client"] }
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
libc = "0.2"
tower = { version = "0.5", features = ["util"] }
tokio-util = "0.7"
http = "1"
