[package]
name = "lantern-runtime-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.23", features = ["latest"] }
kube = { version = "0.97", features = ["runtime", "derive", "client", "ws"] }
object_store = { version = "0.11", features = ["aws", "http"] }
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
libc = "0.2"
tower = { version = "0.5", features = ["util"] }
tokio-util = "0.7"
http = "1"
# mTLS: explicit deps so we control the crypto provider (ring, not aws-lc-rs)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"
# Used by tls::verify_client_cert_vm_id to extract CN/SAN from peer cert DER.
# Pure-Rust, no native deps.
x509-parser = "0.16"
# Per-VM client-cert issuance at spawn (tls::generate_vm_client_cert). Pinned to
# the `ring` crypto provider to match rustls above (no aws-lc-rs). `x509-parser`
# feature enables CertificateParams::from_ca_cert_pem for signing leaves off the
# manager CA.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
# Per-VM cert validity window (rcgen's not_before/not_after use `time` types).
time = "0.3"
hyperlocal = { version = "0.9.1", features = ["client"] }
hyper = { version = "1.10.1", features = ["http1", "client"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
wasmtime = { version = "45.0.1", features = ["wat", "async", "cranelift"] }
wasmtime-wasi = "45.0.1"
sha2 = "0.10"
bytes = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
